Lots of security stuff - tied users to database

--- a/src/main/resources/templates/invoices/list.html
+++ b/src/main/resources/templates/invoices/list.html
@@ -5,6 +5,7 @@
 <title>Invoice List</title>
 </head>
 <body>
+	<div>Hello, {{ user.username }}</div>
 	<h1>Placeholder for a list of invoices.</h1>
 	{{> _logout }}
 </body>
