--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>Invoicify</h1>
 	<a href="/login"><button>Login</button></a>
+	<a href="/signup"><button>Sign up</button></a>
 </body>
 </html>
